test/interaction/Issue2971.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Five ?1 : Set " nil)
((last . 1) . (agda2-goals-action '(0 1)))
((last . 2) . (agda2-make-case-action '("best-number .Five.five = ?" "best-number .Five.prf = ?")))
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-info-action "*Error*" "Issue2971.agda:38.14-18: error: [SplitError.CosplitNoRecordType] Cannot split into projections because the target type Set is not a record type when checking that the expression ? has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2971.agda" . 960)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
